# connapse-yt-research

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/skills/positioning-synthesis/: SKILL.md
.claude/skills/video-brief/: SKILL.md
.claude/skills/wiki-lint/: SKILL.md
.claude/skills/yt-research-daily/: SKILL.md
deployment/: container.yaml
docs/superpowers/plans/: 2026-04-18-connapse-youtube-research-agent-plan.md
docs/superpowers/specs/: 2026-04-18-connapse-youtube-research-agent-design.md
seed/: seed.py
seed/wiki/audience/: agentic-dev-indie.v1.md  claude-code-power-user.v1.md
seed/wiki/strategy/: pillar-balance.v1.md  positioning-theses.v1.md
seed/wiki/topics/: connapse-oss-landscape.v1.md
seed/wiki/voice/: connapse-brand-voice.v1.md
src/connapse_yt/: cli.py  frontmatter.py  manifest.py  outlier.py  scoring.py  wiki_update.py
src/connapse_yt/pull/: hn.py  hn_cli.py  reddit.py  reddit_cli.py  trends.py  trends_cli.py  youtube.py  youtube_cli.py
tests/: test_cli.py  test_frontmatter.py  test_integration_dryrun.py  test_manifest.py  test_outlier.py  test_pull_hn.py  test_pull_reddit.py  test_pull_trends.py  test_pull_youtube.py  test_scoring.py  test_wiki_update.py
tests/fixtures/: youtube_search_response.json  youtube_videos_response.json
