[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "connapse-yt-research"
version = "0.1.0"
description = "Daily YouTube idea research agent for Connapse"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "praw>=7.7",
  "pytrends>=4.9",
  "python-frontmatter>=1.1",
  "pydantic>=2.6",
  "tenacity>=8.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-httpx>=0.30", "responses>=0.25", "freezegun>=1.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/connapse_yt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
